tests/invalid/syntaxErr/custom/invalidParam.wacc
begin
	int f(intx) is
		skip
	end
	skip
end